quick fix for overflow at the top part of the vertical menu when the height is very small

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -28,6 +28,7 @@
     margin-left: auto;
     padding-right: 7%;
     width: 70%;
+    max-height: 100%;
     max-width: 400px;
     line-height: 1.2;
 }
